<resources>
    <string name="app_name">Rainbowdots2</string>
    <string name="action_settings">Settings</string>
    <string name="startscreenImage">startscreenImage</string>
    <string name="startButton">PLAY</string>
    <string name="scoreButton">SCORE</string>
    <string name="GoogleButton">GoogleButton</string>
    <string name="youlosttextview">Time\'s up!</string>
    <string name="youlostimageview">youlostimageview</string>
    <string name="nameedittext" />
    <string name="nameHint">Name:</string>
    <string name="submitnamebutton">Submit name</string>
    <string name="tryagainButton">Try Again</string>
    <string name="youwomviewimage">you won view image</string>
    <string name="youWonTextView">Congratulations!</string>
    <string name="PlayAgainButton">PLAY AGAIN?</string>
    <string name="scorescreenimage">score screen image</string>
    <string name="tryAgainButton">Try Again?</string>
    <string name="scoreTextVIew">Earlier attempts</string>
    <string name="scoretext">here the score should be</string>
    <string name="submitnametoscore">Submit name</string>
    <string name="submitnamewinnertext" />
    <string name="submitnamewinnerhint">Name:</string>
</resources>
